# oddjobs

./: .feature-id  .gitignore  CLAUDE.md  Cargo.toml  GT_OJ_CONVERGENCE_ANALYSIS.md  Makefile  PLAN-od-vq6-oj-gt-integration.md  README.md  TECH_DEBT.md  TODO.md  od-ki9-deep-integration-research.md  od-ki9-dispatch-plan.md  od-vq6.1-witness-handoff-protocol.md  od-vq6.2-merge-queue-ownership.md  quench.toml
.oj/: CLAUDE.md
crates/adapters/: Cargo.toml
crates/adapters/src/: env.rs  lib.rs  subprocess.rs  subprocess_tests.rs  traced.rs  traced_tests.rs
crates/adapters/src/agent/: claude.rs  claude_tests.rs  fake.rs  fake_tests.rs  log_entry.rs  mod.rs  watcher.rs  watcher_tests.rs
crates/adapters/src/agent/watcher_tests/: incremental_parser.rs  lifecycle.rs  mod.rs  parse_state.rs  watch_loop.rs
crates/adapters/src/notify/: bus.rs  bus_tests.rs  desktop.rs  fake.rs  fake_tests.rs  mod.rs  noop.rs  noop_tests.rs
crates/adapters/src/session/: fake.rs  fake_tests.rs  mod.rs  noop.rs  tmux.rs  tmux_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  client_lifecycle.rs  client_queries.rs  client_queries_agent.rs  client_queries_job.rs  client_queries_queue.rs  client_queries_worker.rs  client_tests.rs  color.rs  color_tests.rs  daemon_process.rs  env.rs  help.rs  help_tests.rs  main.rs  main_tests.rs  output.rs  output_tests.rs  poll.rs  poll_tests.rs  table.rs  table_tests.rs
crates/cli/src/commands/: agent.rs  agent_tests.rs  cron.rs  daemon.rs  daemon_tests.rs  decision.rs  decision_tests.rs  emit.rs  emit_tests.rs  env.rs  job.rs  job_tests.rs  job_wait.rs  mod.rs  pipeline.rs  pipeline_tests.rs  pipeline_wait.rs  project.rs  queue.rs  resolve.rs  resolve_tests.rs  run.rs  run_tests.rs  runbook.rs  runbook_tests.rs  session.rs  session_tests.rs  status.rs  status_tests.rs  worker.rs  workspace.rs
crates/core/: Cargo.toml
crates/core/src/: action_tracker.rs  action_tracker_tests.rs  agent.rs  agent_run.rs  agent_run_tests.rs  decision.rs  decision_tests.rs  effect.rs  effect_tests.rs  event.rs  event_tests.rs  id.rs  id_tests.rs  job.rs  job_tests.rs  lib.rs  namespace.rs  namespace_tests.rs  owner.rs  owner_tests.rs  pipeline.rs  pipeline_tests.rs  session.rs  test_support.rs  time_fmt.rs  time_fmt_tests.rs  timer.rs  timer_tests.rs  worker.rs  workspace.rs
crates/core/src/event_tests/: log_summary.rs  log_summary_ext.rs  mod.rs  serialization.rs  serialization_ext.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: env.rs  event_bus.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  main.rs  main_tests.rs  protocol.rs  protocol_query.rs  protocol_status.rs  protocol_tests.rs  protocol_types.rs  protocol_wire.rs
crates/daemon/src/lifecycle/: materialize.rs  mod.rs  reconcile.rs
crates/daemon/src/lifecycle_tests/: event_processing.rs  mod.rs  reconciliation.rs  startup_shutdown.rs
crates/daemon/src/listener/: commands.rs  commands_tests.rs  crons.rs  crons_tests.rs  decisions.rs  decisions_tests.rs  mod.rs  mutations.rs  mutations_tests.rs  query.rs  query_agents.rs  query_crons.rs  query_crons_tests.rs  query_logs.rs  query_orphans.rs  query_queues.rs  query_status.rs  query_tests.rs  queues.rs  queues_tests.rs  suggest.rs  suggest_tests.rs  tmux.rs  workers.rs  workers_tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: activity_logger.rs  activity_logger_tests.rs  breadcrumb.rs  breadcrumb_tests.rs  decision_builder.rs  decision_builder_tests.rs  env.rs  env_tests.rs  error.rs  executor.rs  executor_tests.rs  lib.rs  log_paths.rs  log_paths_tests.rs  monitor.rs  monitor_tests.rs  pipeline_logger.rs  pipeline_logger_tests.rs  queue_logger.rs  scheduler.rs  scheduler_tests.rs  spawn.rs  spawn_tests.rs  steps.rs  steps_tests.rs  test_helpers.rs  time_fmt.rs  usage_metrics.rs  usage_metrics_tests.rs  vars.rs  worker_logger.rs  worker_logger_tests.rs  workspace.rs  workspace_tests.rs
crates/engine/src/executor_tests/: agent.rs  core.rs  mod.rs  shell.rs  worker.rs  workspace.rs
crates/engine/src/runtime/: agent_run.rs  job.rs  mod.rs  monitor.rs  monitor_tests.rs  pipeline.rs
crates/engine/src/runtime_tests/: agent_run.rs  cron.rs  cron_agent.rs  cron_concurrency.rs  directives.rs  errors.rs  job_create.rs  job_deleted.rs  mod.rs  monitoring.rs  notify.rs  on_dead.rs  resume.rs  steps.rs  steps_cycles.rs  steps_lifecycle.rs  steps_locals.rs  timer_cleanup.rs  worker.rs  worker_concurrency.rs  worker_external.rs  worker_queue.rs
crates/runbook/: Cargo.toml  build.rs
crates/runbook/src/: agent.rs  agent_tests.rs  command.rs  command_tests.rs  cron.rs  find.rs  find_tests.rs  import.rs  import_tests.rs  job.rs  job_tests.rs  lib.rs  parser.rs  pipeline.rs  pipeline_tests.rs  queue.rs  slug.rs  slug_tests.rs  source.rs  template.rs  template_tests.rs  validate.rs
crates/runbook/src/agent_tests/: action_config.rs  agent_def.rs  lifecycle.rs  mod.rs  prime_def.rs
crates/runbook/src/parser_tests/: action_trigger.rs  agents.rs  epic.rs  errors.rs  formats.rs  mod.rs  queue_poll.rs  queues.rs  template_refs.rs
crates/runbook/tests/: parsing.rs
crates/runbook/tests/fixtures/: epic.hcl  sample_build.hcl  sample_build.json  sample_build.toml
crates/runbook/tests/parsing/: action_trigger.rs  agents.rs  cron.rs  epic.rs  errors.rs  formats.rs  prime.rs  queues.rs  references.rs  template_refs.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  parse_error.rs  span.rs  validator.rs  validator_tests.rs
crates/shell/src/ast/: args.rs  utils.rs  visitor.rs
crates/shell/src/exec/: mod.rs
crates/shell/src/parser/: mod.rs  words.rs
crates/shell/src/parser_tests/: assignments.rs
crates/shell/tests/: bash_compat_tests.rs  e2e_tests.rs  env_tests.rs  error_tests.rs  filesystem_tests.rs  job_tests.rs
crates/storage/: Cargo.toml
crates/storage/src/: checkpoint.rs  checkpoint_tests.rs  lib.rs  migration.rs  snapshot.rs  snapshot_tests.rs  state.rs  state_tests.rs  wal.rs
crates/storage/src/state_tests/: action_attempts.rs  agents.rs  cron.rs  decisions.rs  idempotency.rs  mod.rs  queue.rs  step_history.rs  workers.rs
(+170 files in other folders)
