[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/core",
    "crates/daemon",
    "crates/runbook",
    "crates/shell",
    "crates/storage",
    "crates/adapters",
    "crates/engine",
]

# Root package for workspace-level integration tests
[package]
name = "oj-specs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
assert_cmd.workspace = true
dirs.workspace = true
serial_test.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true

[[test]]
name = "specs"
path = "tests/specs.rs"

[workspace.dependencies]
async-trait = "0.1"
hcl-rs = "0.18"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
notify-rust = "4"

# dev dependencies
assert_cmd = "2"
dirs = "5"
serial_test = "3"
similar-asserts = "1"
tempfile = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
lto = true
panic = "abort"
