[package]
name = "oj-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
test-support = []  # Enables FakeAdapter exports for other crates' tests

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
oj-runbook = { path = "../runbook", version = "0.1.0" }
async-trait.workspace = true
dirs = "5.0"
parking_lot.workspace = true
notify = "6.1"
notify-rust.workspace = true
rand = "0.9"
serde_json = "1.0"
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

[dev-dependencies]
serial_test.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
