[package]
name = "oj"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
oj-daemon = { path = "../daemon", version = "0.1.0" }
oj-engine = { path = "../engine", version = "0.1.0" }
oj-runbook = { path = "../runbook", version = "0.1.0" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6.1"
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
yare.workspace = true
