[package]
name = "oj-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
test-support = []  # Enables test builders and helpers for other crates' tests

[dependencies]
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = "1"
tempfile.workspace = true
yare.workspace = true
