[package]
name = "oj-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ojd"
path = "src/main.rs"

[dependencies]
oj-adapters = { path = "../adapters", version = "0.1.0" }
oj-core = { path = "../core", version = "0.1.0" }
oj-engine = { path = "../engine", version = "0.1.0" }
oj-runbook = { path = "../runbook", version = "0.1.0" }
oj-storage = { path = "../storage", version = "0.1.0" }

async-trait.workspace = true
parking_lot.workspace = true
fs2 = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
oj-adapters = { path = "../adapters", version = "0.1.0", features = ["test-support"] }
tempfile.workspace = true
yare.workspace = true

[lints]
workspace = true
