[package]
name = "oj-runbook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
hcl-rs.workspace = true
indexmap.workspace = true
oj-core = { path = "../core", version = "0.1.0" }
oj-shell = { path = "../shell", version = "0.1.0" }
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
yare.workspace = true
