[package]
name = "oj-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
glob = "0.3"
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "fs"] }
tracing.workspace = true

[dev-dependencies]
proptest = "1.4"
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yare.workspace = true
