[package]
name = "oj-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
oj-core = { path = "../core", version = "0.1.0" }
chrono = { version = "0.4", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = "0.1"
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
yare.workspace = true
